<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_home">홈</string>
    <string name="menu_friend">친구들</string>
    <string name="menu_favorite">즐겨찾기</string>
    <string name="menu_setting">설정</string>

    <string name="action_search">Search</string>
    <string name="app_name">QUIZC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_package">PackageActivity</string>
    <string name="title_section1">Info</string>
    <string name="title_section2">Q</string>
    <string name="title_section3">A</string>
    <string name="title_section4">Comment</string>
    <string name="login">로그인</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_qp">QPActivity</string>
    <string name="title_activity_qc">QCActivity</string>
    <string name="title_activity_qm">QMActivity</string>
    <string name="title_activity_qi">QIActivity</string>
    <string name="title_qp_m">My Activity</string>
    <string name="title_qp_i">Package Info</string>
    <string name="title_qp_q">Q List</string>
    <string name="title_qp_c">Comments</string>
    <string name="title_activity_qplist">QPListActivity</string>
    <string name="title_activity_qmain">QMainActivity</string>
    <string name="title_qmain_topheader">등록하고 풀고!</string>
    <string name="title_qmain_top">모든 지식과 정보들을 퀴즈로 풀어보세요.</string>
    <string name="title_qmain_topcomment">자신이 알고 있는 정보를 퀴즈로 만들어 공유할 수 있습니다.</string>
    <string name="title_qmain_now">Now...</string>
    <string name="title_qmain_stat">My Status</string>
    <string name="title_qmain_myregcnt">등록개수</string>
    <string name="title_qmain_myavg">정답률</string>
    <string name="title_qmain_myreg">등록률</string>
    <string name="title_qmain_myprog">진도율</string>
    <string name="title_qplist_top">Package List</string>
    <string name="title_qi_summary">Summary</string>
    <string name="title_qi_detail">Detail</string>
    <string name="title_qi_addq">Add Q</string>
    <string name="title_activity_qcreate">QCreateActivity</string>
    <string name="title_createq_top">Create Q</string>
    <string name="title_createq_q">Quiz</string>
    <string name="title_createq_cor">정답</string>
    <string name="title_createq_incor">오답</string>
    <string name="title_createq_basictop">필수 정보</string>
    <string name="title_createq_optiontop">부가 정보</string>
    <string name="title_createq_diff">난이도</string>
    <string name="title_createq_cat">분류</string>
    <string name="title_createq_comment">설명</string>
    <string name="title_createq_hint">힌트</string>
    <string name="title_createq_tag">Tag</string>
    <string name="title_createq_hint_title">질문을 입력해주세요.</string>
    <string name="title_createq_item_name">답변 입력</string>
    <string name="title_createq_item_desc">내용/힌트/Tag</string>
    <string name="title_createq_hint_place">힌트 입력</string>
    <string name="title_createq_com_place">내용 입력(문제 풀고 보입니다.)</string>
    <string name="title_createq_tag_place">Tag 입력(,로 구분)</string>
    <string name="txt_createnext">만들고 또 만들기</string>
    <string name="txt_create">만들기</string>
    <string name="register">등록</string>
    <string name="title_activity_qqmain">QQMainActivity</string>
    <string name="title_activity_frag_qinfo">FragQInfoActivity</string>
    <string name="title_activity_frag_qcomment">FragQCommentActivity</string>
    <string name="title_activity_frag_qanswer">FragQAnswerActivity</string>
    <string name="title_q_title">Info</string>
    <string name="title_q_answer">Answers</string>
    <string name="title_q_comment">Comments</string>
    <string name="title_q_searchmake">문제 검색 및 만들기</string>
    <string name="title_q_searchment">먼저 검색해주세요.</string>
    <string name="neadsearchment">검색어를 입력해주세요.</string>
    <string name="getcomment">댓글을 입력해주세요.</string>
    <string name="startanswer">문제 풀기</string>
    <string name="keyword">키워드</string>
    <string name="summary">요약</string>
    <string name="summaryment">간단한 설명을 입력해주세요.</string>
    <string name="search">검색</string>
    <string name="difficulty">난이도</string>
    <string name="registermember">만든사람</string>
    <string name="tags">Tags</string>
    <string name="category">분류</string>
    <string name="avg_cor">정답률</string>
    <string name="avg_answer">응답률</string>
    <string name="submitanswer">답변 제출</string>
    <string name="showinfo">정보 보기</string>
    <string name="nextq">다음문제 풀기</string>
    <string name="showinlyasnwered">풀었거나 만든 문제만 보입니다.</string>
    <string name="title_activity_qsearch">QSearchActivity</string>
    <string name="title_activity_pcreate">PCreateActivity</string>
    <string name="title_activity_qanswer">QAnswerActivity</string>
    <string name="title_activity_qanswer_result">QAnswerResultActivity</string>
    <string name="app_id">159081950969245</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="dmenu_hone">Home</string>
    <string name="dmenu_fav">Favorites</string>
    <string name="dmenu_friends">Friends</string>
    <string name="dmenu_info">My Info</string>
    <string name="dmenu_setting">Setting</string>
    <string name="dmenu_exit">Exit</string>
    <string name="title_activity_dfav">DFavActivity</string>
    <string name="title_activity_dfriends">DFriendsActivity</string>
    <string name="title_activity_dmy_page">DMyPageActivity</string>
    <string name="title_activity_dabout">DAboutActivity</string>
    <string name="main_today">TODAY</string>
    <string name="main_category">CATEGORY</string>
    <string name="main_popular">POPULAR</string>
    <string name="main_favorite">FAVORITES</string>
    <string name="main_all">ALL</string>
    <string name="main_make">MAKE QUIZ</string>
    <string name="main_search">SEARCH QUIZ</string>
    <string name="title_activity_qquiz_list">QQuizListActivity</string>
    <string name="title_activity_qcategory_list">QCategoryListActivity</string>
    <string name="title_activity_qfav_list">QFavListActivity</string>
    <string name="title_activity_image_crop">ImageCropActivity</string>
    <string name="use">선택</string>
    <string name="reuse">다시 선택</string>

</resources>
