<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PCreateActivity" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
    android:orientation="vertical" >
    
<EditText
    android:id="@+id/txtKeyword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/keyword"
    android:inputType="textMultiLine" >

        <requestFocus />

</EditText>

         <Spinner
             android:id="@+id/cboCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />

<EditText
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:hint="@string/summaryment"
        android:ems="10"
        android:inputType="textMultiLine" />


</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="0dip"
            android:orientation="vertical" >

<View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_margin="0dip"
            android:background="?android:attr/dividerVertical" />
    <Button
        android:id="@+id/btn_create"
                 android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:text="@string/txt_create"
        android:background="?android:attr/selectableItemBackground" />
    </LinearLayout>
</RelativeLayout>
