<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainbg"
    tools:context=".QCreateActivity" >

<ScrollView
    android:padding="@dimen/padd_10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padd_5"
    android:background="@color/white"
    android:orientation="vertical" >
        
    <EditText
        android:id="@+id/txtSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:layout_marginTop="@dimen/padd_5"
    	android:layout_marginBottom="@dimen/padd_5"
        android:hint="@string/title_createq_hint_title"
        android:textSize="@dimen/create_q_title"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:orientation="horizontal"
    android:padding="0dip" >
                    <EditText
                        android:id="@+id/qitem1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/title_createq_item_name"
                        android:textSize="@dimen/main_item_title" />
                    <ImageButton
                        android:id="@+id/tgl1"
                        android:layout_width="@dimen/ico_item"
                        android:layout_height="@dimen/ico_item"
                        android:background="@color/white"
                        android:src="@drawable/ic_item_cor_b" />

        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:orientation="horizontal"
    android:padding="0dip" >
                    <EditText
                        android:id="@+id/qitem2"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/title_createq_item_name"
                        android:textSize="@dimen/main_item_title" />
                    <ImageButton
                        android:id="@+id/tgl2"
                        android:layout_width="@dimen/ico_item"
                        android:layout_height="@dimen/ico_item"
                        android:background="@color/white"
                        android:src="@drawable/ic_item_incor_b" />

        </LinearLayout>
        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:orientation="horizontal"
    android:padding="0dip" >
                    <EditText
                        android:id="@+id/qitem3"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/title_createq_item_name"
                        android:textSize="@dimen/main_item_title" />

                    <ImageButton
                        android:id="@+id/tgl3"
                        android:layout_width="@dimen/ico_item"
                        android:layout_height="@dimen/ico_item"
                        android:background="@color/white"
                        android:src="@drawable/ic_item_incor_b" />

        </LinearLayout>
         <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:orientation="horizontal"
    android:padding="0dip" >
                    <EditText
                        android:id="@+id/qitem4"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/title_createq_item_name"
                        android:textSize="@dimen/main_item_title" />

                    <ImageButton
                        android:id="@+id/tgl4"
                        android:layout_width="@dimen/ico_item"
                        android:layout_height="@dimen/ico_item"
                        android:background="@color/white"
                        android:src="@drawable/ic_item_incor_b" />

        </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_margin="0dip"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padd_5"
    android:orientation="horizontal" >
        <TextView
            android:id="@+id/textViewTopCate"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
        	android:textSize="@dimen/main_item_title"
            android:text="@string/title_createq_cat" />

         <Spinner
             android:id="@+id/cboCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_margin="0dip"
        android:background="?android:attr/dividerVertical" />
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padd_5"
    android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewTopDiff"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
        	android:textSize="@dimen/main_item_title"
            android:text="@string/title_createq_diff" />

         <SeekBar
             android:id="@+id/sbDiff"
             android:max="4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         </LinearLayout>
         
    </LinearLayout>

        <TextView
            android:id="@+id/textViewTopOption"
            android:layout_margin="@dimen/padd_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/title_createq_optiontop" />

    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padd_5"
    android:background="@color/white"
    android:orientation="vertical" >
<EditText
        android:id="@+id/txtcom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:layout_marginTop="@dimen/padd_5"
    	android:layout_marginBottom="@dimen/padd_5"
        android:hint="@string/title_createq_com_place" />
<EditText
        android:id="@+id/txthint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:layout_marginBottom="@dimen/padd_5"
        android:hint="@string/title_createq_hint_place" />
<EditText
        android:id="@+id/txttags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:layout_marginBottom="@dimen/padd_5"
        android:hint="@string/title_createq_tag_place" />
    </LinearLayout>

<View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="10dip"
        android:background="?android:attr/dividerVertical" />
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:orientation="horizontal"
    android:padding="0dip" >
<View
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_margin="0dip"
        android:background="?android:attr/dividerVertical" />
    <Button
        android:id="@+id/btn_createnext"
        android:layout_width="0dip"
        android:layout_height="60dip"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:background="@color/actionbar"
        android:text="@string/txt_createnext" />
<View
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_margin="0dip"
        android:background="?android:attr/dividerVertical" />
    <Button
        android:id="@+id/btn_create"
        android:layout_width="0dip"
        android:layout_height="60dip"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:background="@color/actionbar"
        android:text="@string/txt_create" />
<View
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_margin="0dip"
        android:background="?android:attr/dividerVertical" />

</LinearLayout>
<View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_margin="0dip"
        android:background="?android:attr/dividerVertical" />

</LinearLayout>
</ScrollView>
</LinearLayout>