<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QIActivity" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="vertical" >

	    <TextView
        android:id="@+id/pinfo_summry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_margin="10dip"
        android:textColor="@color/headerft"
        android:textSize="20sp" />
<View
            android:id="@+id/v6"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_margin="0dip"
            android:background="?android:attr/dividerVertical"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:layout_marginBottom="10dip"
    android:orientation="horizontal"
    android:padding="0dip" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:orientation="vertical"
    android:background="@drawable/bg_card"
            android:padding="0dip" >

	    <TextView
	        android:id="@+id/avg_answer_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:focusable="false"
	        android:textColor="@color/headerft"
	        android:text="@string/title_qmain_myprog"
	        android:textSize="24sp" />

	    <TextView
	        android:id="@+id/avg_answer"
	        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	        android:layout_gravity="center"
            android:layout_margin="5dip"
	        android:focusable="false"
	        android:textColor="@color/prog"
	        android:textSize="40sp" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:orientation="vertical"
    android:background="@drawable/bg_card"
            android:padding="0dip" >

	    <TextView
	        android:id="@+id/avg_answer_text1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:focusable="false"
	        android:textColor="@color/headerft"
	        android:text="@string/title_qmain_myavg"
	        android:textSize="24sp" />

	    <TextView
        android:id="@+id/avg_cor"
	        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	        android:layout_gravity="center"
            android:layout_margin="5dip"
        android:focusable="false"
        android:textColor="@color/prog"
        android:textSize="40sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:orientation="vertical"
    android:background="@drawable/bg_card"
            android:padding="0dip" >

	    <TextView
	        android:id="@+id/avg_answer_text2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:focusable="false"
	        android:textColor="@color/headerft"
	        android:text="@string/title_qmain_myreg"
	        android:textSize="24sp" />

	    <TextView
        android:id="@+id/avg_reg"
	        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	        android:layout_gravity="center"
            android:layout_margin="5dip"
        android:focusable="false"
        android:textColor="@color/prog"
        android:textSize="40sp" />
    </LinearLayout>
</LinearLayout>
<View
            android:id="@+id/v5"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_margin="0dip"
            android:background="?android:attr/dividerVertical"/>

<Button
    android:id="@+id/btnstartanswer"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:background="@drawable/bg_card"
    android:text="@string/startanswer" />

</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical" >
<View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_margin="0dip"
            android:background="?android:attr/dividerVertical"/>
<Button
    android:id="@+id/btnAddinP"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
    android:text="@string/title_qi_addq" />

</LinearLayout>
</RelativeLayout>
