<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FragQInfoActivity" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_card" >
<TextView
        android:id="@+id/pinfo_summry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:textColor="@color/headerft"
        android:text = "Summary"
        android:textSize="@dimen/info_main_ftsize" />
<View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dip"
            android:background="?android:attr/dividerVertical" 
            android:layout_centerHorizontal="true"/>

<ListView
    android:id="@+id/itemlist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

</ListView>
    
</LinearLayout>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:orientation="vertical"
    android:padding="0dip"
    android:background="@drawable/bg_card" >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:orientation="horizontal"
    android:padding="0dip" >

    <Button
        android:id="@+id/btn_incor"
        android:layout_width="0dip"
        android:layout_height="40dip"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center|center_vertical"
        android:text="@string/txt_createnext"
        android:textColor="@color/incorrect" />

<View
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_margin="0dip"
        android:background="?android:attr/dividerVertical" />
    <Button
        android:id="@+id/btn_cor"
        android:layout_width="0dip"
        android:layout_height="40dip"
        android:layout_weight="1"
        android:gravity="center|center_vertical"
        android:textColor="@color/correct"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/txt_create" />

</LinearLayout>

<View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="0dip"
            android:background="?android:attr/dividerVertical" 
            android:layout_centerHorizontal="true"/>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:orientation="horizontal"
    android:padding="0dip">

    <TextView
        android:id="@+id/labelcategory"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
    	android:layout_margin="5dip"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="left|center_vertical"
        android:textSize="@dimen/info_detail_ftsize"
        android:text="@string/category" />

    <TextView
        android:id="@+id/txt_category"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
    	android:layout_margin="5dip"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="right|center_vertical"
        android:textSize="@dimen/info_detail_ftsize"
        android:text="@string/txt_create" />

</LinearLayout>

<View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="0dip"
            android:background="?android:attr/dividerVertical" 
            android:layout_centerHorizontal="true"/>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:orientation="horizontal"
    android:padding="0dip" >

    <TextView
        android:id="@+id/labelwho"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
    	android:layout_margin="5dip"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="left|center_vertical"
        android:textSize="@dimen/info_detail_ftsize"
        android:text="@string/registermember" />

    <TextView
        android:id="@+id/txt_member"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
    	android:layout_margin="5dip"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="right|center_vertical"
        android:textSize="@dimen/info_detail_ftsize"
        android:text="@string/txt_create" />

</LinearLayout>

<View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="0dip"
            android:background="?android:attr/dividerVertical" 
            android:layout_centerHorizontal="true"/>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:orientation="horizontal"
    android:padding="0dip" >

    <TextView
        android:id="@+id/labeldiff"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
    	android:layout_margin="5dip"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="left|center_vertical"
        android:textSize="@dimen/info_detail_ftsize"
        android:text="@string/difficulty" />

    <TextView
        android:id="@+id/txt_difficulty"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
    	android:layout_margin="5dip"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="right|center_vertical"
        android:textSize="@dimen/info_detail_ftsize"
        android:text="@string/txt_create" />

</LinearLayout>

<View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="0dip"
            android:background="?android:attr/dividerVertical" 
            android:layout_centerHorizontal="true"/>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dip"
    android:orientation="vertical"
    android:padding="0dip" >
    <TextView
        android:id="@+id/txt_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:layout_margin="5dip"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="right|center_vertical"
        android:textSize="@dimen/info_detail_ftsize"
        android:text="@string/txt_create" />

<View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="0dip"
            android:background="?android:attr/dividerVertical" 
            android:layout_centerHorizontal="true"/>
<TextView
    android:id="@+id/txt_hint"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    	android:layout_margin="5dip"
        android:textSize="@dimen/info_detail_ftsize"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="right|center_vertical" />
</LinearLayout>
</LinearLayout>



</LinearLayout>
